# qwaviz

./: .gitignore  Cargo.toml  README.md
assets/: arrow.glb
examples/: qwaviz-1D.rs
src/: braket.rs  domains.rs  fields.rs  framework.rs  frontend.rs  harmonic_well.rs  infinite_square_well.rs  lib.rs  main.rs  potential.rs  prelude.rs  quantum_system.rs  signatures.rs  vectorspace.rs  vectorspaces.rs
src/framework/: braket.rs  core.rs  discrete_system.rs  mod.rs  potential.rs  prelude.rs  wavefunction.rs
src/framework/braket/: braket.rs  mod.rs  operations.rs  wf_bra.rs  wf_ket.rs
src/framework/core/: domain.rs  mod.rs  vectorspace.rs
src/framework/core/domain/: domain.rs  domain_sect_1d.rs  finite_domains.rs  mod.rs
src/framework/discrete_system/: harmonic_well.rs  infinite_square_well.rs  two_state.rs
src/framework/potential/: harmonic_well.rs  infinite_square_well.rs  mod.rs  potential.rs
src/framework/wavefunction/: mod.rs  signature.rs  wavefunction.rs
src/framework/wavefunction/signature/: mod.rs  signature.rs  wf_1d.rs  wf_1s_1t.rs  wf_finite.rs
src/frontend/: mod.rs  rotator.rs  run.rs  startup.rs  two_state.rs  wf_1d_vis.rs  wf_component.rs  wf_polyline.rs
src/frontend/two_state/: bundle.rs
src/frontend/wf_1d_vis/: animation_system.rs  bundle.rs  cache_1d.rs  cache_1d_system.rs  filled_wave.rs
src/frontend/wf_polyline/: bundle.rs  mod.rs  system.rs
src/quantum_system/: harmonic_well.rs  infinite_square_well.rs  two_state.rs
