[package]
name = "qwaviz"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.0", features = ["bevy_scene", "bevy_gltf"] }
bevy_infinite_grid = "0.17.0"
bevy_panorbit_camera = "0.33.0"
bevy_polyline = "0.13.0"
num-complex = "0.4.6"
rayon = { version = "1.11.0", optional = true }
thiserror = "2.0.18"

[features]
par_braket = ["dep:rayon"]
